<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.Register.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="379dp"
        android:layout_height="213dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/image_auth"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/signup"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView">

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="428dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextView">

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="537dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="495dp">

    </com.google.android.material.textfield.TextInputLayout>

    <com.dicoding.submissionintermediate.ui.custom.CustomButton
        android:id="@+id/signupButton"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/purple"
        android:text="@string/signup"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="624dp" />

    <com.dicoding.submissionintermediate.ui.custom.CustomEditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="555dp" />

    <com.dicoding.submissionintermediate.ui.custom.CustomEditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="369dp" />

    <com.dicoding.submissionintermediate.ui.custom.CustomEditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="466dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
